--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "body-parser": "~1.13.2",
     "cookie-parser": "~1.3.5",
     "connect-flash": "0.1.1",
+    "chai": "~1.8.1",
     "express": "~4.11.1",
     "express-session": "^1.3.3",
     "debug": "~2.2.0",
@@ -25,7 +26,9 @@
     "mongoose": "^4.1.12",
     "passport": "^0.2.1",
     "passport-local": "^1.0.0",
+    "bcrypt-nodejs": "latest",
     "passport-local-mongoose" : "^1.0.0",
+    "should": "~2.1.0",
     "serve-favicon": "~2.3.0"
   }
 }
