--- a/package.json
+++ b/package.json
@@ -2,8 +2,10 @@
   "name": "Gloria",
   "version": "0.0.0",
   "private": true,
+  "description": "a NodeJs and ReactJs study project for Tom",
   "scripts": {
-    "start": "node ./bin/www"
+    "start": "node ./bin/www",
+    "postinstall": "node node_modules/bower/bin/bower install"
   },
   "author": "Tom Duan <tom.duanlian@gmail.com>",
   "repository": {
@@ -30,5 +32,17 @@
     "passport-local-mongoose" : "^1.0.0",
     "should": "~2.1.0",
     "serve-favicon": "~2.3.0"
+  },
+  "devDependencies": {
+    "bower": "^1.3.12",
+    "browserify": "^11.0.1",
+    "gulp": "^3.8.10",
+    "gulp-nodemon": "^2.0.3",
+    "gulp-sass": "^2.0.4",
+    "gulp-sourcemaps": "^1.5.2",
+    "react": "^0.14.0",
+    "react-dom": "^0.14.0",
+    "reactify": "^1.0.0",
+    "vinyl-source-stream": "^1.0.0"
   }
 }
